added cleaners for ski house. Added york subdirectory for york st rental

--- a/york/index.html
+++ b/york/index.html
@@ -11,10 +11,9 @@
 	    $("#important").load("important.html"); 
 	    $("#rules").load("rules.html"); 
 	    $("#house").load("house.html"); 
-	    $("#recreation").load("recreation.html"); 
-	    $("#ski").load("ski.html"); 
-	    $("#skicalendar").load("skicalendar.html"); 
-	    $("#cleaners").load("cleaners.html"); 
+	    $("#lease").load("lease.html"); 
+	    $("#ad").load("ad.html"); 
+	    $("#supplies").load("supplies.html"); 
 	});
 </script> 
 
@@ -35,17 +34,14 @@
   <div id="house_nav">
 	<div id="house"></div>
   </div>
-  <div id="recreation_nav">
-	<div id="recreation"></div>
+  <div id="lease_nav">
+	<div id="lease"></div>
   </div>
-  <div id="ski_nav">
-	<div id="ski"></div>
+  <div id="ad_nav">
+	<div id="ad"></div>
   </div>
-  <div id="skicalendar_nav">
-	<div id="skicalendar"></div>
-  </div>
-  <div id="cleaners_nav">
-	<div id="cleaners"></div>
+  <div id="supplies_nav">
+	<div id="supplies"></div>
   </div>
 </div>
 
