--- a/york/nav.html
+++ b/york/nav.html
@@ -15,9 +15,8 @@
     <li><a href="#important_nav" class="active">Important</a></li>
     <li><a href="#rules_nav" class="active">Rules</a></li>
     <li><a href="#house_nav" class="active">House</a></li>
-    <li><a href="#recreation_nav" class="active">Recreation</a></li>
-    <li><a href="#ski_nav" class="active">Ski</a></li>
-    <li><a href="#skicalendar_nav" class="active">Ski Calendar</a></li>
-    <li><a href="#cleaners_nav" class="active">Cleaners</a></li>
+    <li><a href="#lease_nav" class="active">Sample Lease</a></li>
+    <li><a href="#ad_nav" class="active">Advertisement</a></li>
+    <li><a href="#supplies_nav" class="active">Supplies</a></li>
   </ul>
 </nav>
