added ski hottub. Updated deploy to use new path

--- a/york/index.html
+++ b/york/index.html
@@ -8,12 +8,12 @@
 	    $("#nav").load("nav.html"); 
 	    $("#footer").load("footer.html"); 
 
-	    $("#important").load("important.html"); 
-	    $("#rules").load("rules.html"); 
-	    $("#house").load("house.html"); 
 	    $("#lease").load("lease.html"); 
-	    $("#ad").load("ad.html"); 
-	    $("#supplies").load("supplies.html"); 
+	    // $("#rules").load("rules.html");
+	    // $("#house").load("house.html");
+	    // $("#important").load("important.html");
+	    // $("#ad").load("ad.html");
+	    // $("#supplies").load("supplies.html");
 	});
 </script> 
 
@@ -25,17 +25,17 @@
 <div id="nav"></div>
 
 <div id="pages">
-  <div id="important_nav" class="active">
-	<div id="important"></div>
+  <div id="lease_nav">
+	<div id="lease"></div>
   </div>
-  <div id="rules_nav">
+<!--   <div id="rules_nav">
 	<div id="rules"></div>
   </div>
   <div id="house_nav">
 	<div id="house"></div>
   </div>
-  <div id="lease_nav">
-	<div id="lease"></div>
+  <div id="important_nav" class="active">
+	<div id="important"></div>
   </div>
   <div id="ad_nav">
 	<div id="ad"></div>
@@ -43,6 +43,7 @@
   <div id="supplies_nav">
 	<div id="supplies"></div>
   </div>
+  -->
 </div>
 
 <div id="footer"></div>
