--- a/york/nav.html
+++ b/york/nav.html
@@ -12,11 +12,11 @@
 
 <nav>
   <ul>
-    <li><a href="#important_nav" class="active">Important</a></li>
+    <li><a href="#lease_nav" class="active">Sample Lease</a></li>
+<!--    <li><a href="#important_nav" class="active">Important</a></li>
     <li><a href="#rules_nav" class="active">Rules</a></li>
     <li><a href="#house_nav" class="active">House</a></li>
-    <li><a href="#lease_nav" class="active">Sample Lease</a></li>
     <li><a href="#ad_nav" class="active">Advertisement</a></li>
-    <li><a href="#supplies_nav" class="active">Supplies</a></li>
+    <li><a href="#supplies_nav" class="active">Supplies</a></li> -->
   </ul>
 </nav>
