added floor plan and dimensions to lease

--- a/york/footer.html
+++ b/york/footer.html
@@ -1,4 +1,4 @@
 <!-- footer -->
 <center>
-<h5>Photos <a href="https://www.airbnb.com/rooms/1593594" target="_blank">link</a> (for photos).</h5>
+<h5>Photos <a href="https://sfbay.craigslist.org/sfc/apa/d/san-francisco-renovated-open-concept/7059265133.html" target="_blank">link</a> (for photos).</h5>
 </center>
