added appliance JPEGs

--- a/york/index.html
+++ b/york/index.html
@@ -13,7 +13,7 @@
 	    // $("#house").load("house.html");
 	    // $("#important").load("important.html");
 	    // $("#ad").load("ad.html");
-	    // $("#supplies").load("supplies.html");
+	    $("#supplies").load("supplies.html");
 	});
 </script> 
 
@@ -40,10 +40,10 @@
   <div id="ad_nav">
 	<div id="ad"></div>
   </div>
+  -->
   <div id="supplies_nav">
 	<div id="supplies"></div>
   </div>
-  -->
 </div>
 
 <div id="footer"></div>
