--- a/york/nav.html
+++ b/york/nav.html
@@ -16,7 +16,7 @@
 <!--    <li><a href="#important_nav" class="active">Important</a></li>
     <li><a href="#rules_nav" class="active">Rules</a></li>
     <li><a href="#house_nav" class="active">House</a></li>
-    <li><a href="#ad_nav" class="active">Advertisement</a></li>
-    <li><a href="#supplies_nav" class="active">Supplies</a></li> -->
+    <li><a href="#ad_nav" class="active">Advertisement</a></li>  -->
+    <li><a href="#supplies_nav" class="active">Supplies</a></li>
   </ul>
 </nav>
